--- a/stiel.css
+++ b/stiel.css
@@ -3,7 +3,7 @@ box-sizing: border-box;
 margin: 0;
 padding: 0;
 scroll-behavior: smooth;
---main:#3a6cf4;
+--main:#ff0000;
 }
 header{
 background-color: rgb(143, 141, 138) !important;
